bad/assign_func_call_bool_int.example_compiler_output
ERROR
[1mbad/assign_func_call_bool_int.lat:5:8: [1;31merror: [0;1mleft side is not assignable[m
	foo() = 42;
	      [1;32m^[m
[1mbad/assign_func_call_bool_int.lat:5:2: [1;34mnote: [0;1mleft side starts here[m
	foo() = 42;
	[1;32m^[m
